[package]
name = "trader"
version = "0.1.1"
authors = ["RollenRegistratorBot <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = {version = "0.3", git = "ssh://git@github.com/Overmuse/alpaca", branch = "main"}
dotenv = "0.15.0"
futures = "0.3.5"
rdkafka = {version = "0.25.0", features = ["ssl-vendored"]}
serde = "1.0.116"
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
tracing-bunyan-formatter = "0.1"
uuid = "0.8.1"

[dev-dependencies]
mockito = "0.27"
