[package]
name = "trader"
version = "0.2.1"
authors = ["RollenRegistratorBot <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = { git = "ssh://git@github.com/Overmuse/alpaca", tag = "v0.5.0" }
anyhow = "1.0.40"
config = "0.11.0"
dotenv = "0.15.0"
futures = "0.3.5"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.1.0" }
rdkafka = {version = "0.26.0", features = ["ssl-vendored"]}
serde = "1.0.116"
serde_json = "1.0.57"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
uuid = "0.8.1"

[dev-dependencies]
mockito = "0.27"
