[package]
name = "trader"
version = "2.0.2"
authors = ["RollenRegistratorBot <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1"
alpaca = { git = "ssh://git@github.com/Overmuse/alpaca", tag = "v0.7.2", default-features=false, features = ["rest"] }
anyhow = "1.0"
config = "0.11"
dotenv = "0.15"
futures = "0.3"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.3.3" }
rdkafka = {version = "0.26", features = ["ssl-vendored"]}
rust_decimal = "1.17.0"
sentry = "0.23"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
trading-base = { git = "ssh://git@github.com/Overmuse/trading-base", tag = "v0.5.1" }
uuid = "0.8"

[dev-dependencies]
mockito = "0.30"
